# raspberry-pi-fan-controller

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: fanpid.toml
fanpid/: __init__.py  compose.py  config.py  controller.py  daemon.py  fan.py  index.html  pid.py  process.py  service.py  state.py  temperature.py  web.py
fanpid/frontend/: app.js  index.html  styles.css
scripts/: install.sh  uninstall.sh
systemd/: fanpid.service
